--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <style>
                 
                 body {
-                background: url('./styles/background/romadoria.jpg');
+                background: url('romadoria.jpg');
                 background-repeat :no-repeat;
                 background-size :cover;
                 } 
